--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-cas</artifactId>
+            <version>6.3.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
